compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_struct_snapshots@multiple_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Test<T1, T2> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13825029388148061585,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        13825029388148061585,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:7:11,
                            },
                            type_arguments: [],
                            location: <internal>:7:11,
                        },
                        location: <internal>:7:11,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [],
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:12:14,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:12:14,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:16:18,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [],
                                location: <internal>:16:18,
                            },
                        ],
                    },
                    location: <internal>:0:22,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
