compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_struct_snapshots@no_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Test {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:7:11,
                            },
                            type_arguments: [],
                            location: <internal>:7:11,
                        },
                        location: <internal>:7:11,
                    },
                    visibility: Private,
                    builtin: false,
                    fields: [],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:14,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
