compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_struct_snapshots@single_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Test<T> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            7555774581651727328,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        7555774581651727328,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Test",
                                location: <internal>:7:11,
                            },
                        ),
                        location: <internal>:7:11,
                    },
                    builtin: false,
                    properties: [],
                    methods: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:12:13,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:12:13,
                        },
                    ],
                    location: <internal>:0:17,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
