compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__implicit_imports@Boolean.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn foo() -> Boolean { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::Boolean,
                        type_params: [],
                        location: <internal>:12:19,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:20:23,
                    },
                ),
                location: <internal>:0:23,
            },
        ),
    },
    statements: {},
    expressions: {},
}
