compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__implicit_imports@Int16.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo() -> Int16 { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14135399907963487766,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    14135399907963487766,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "foo",
                            location: <internal>:3:6,
                        },
                        type_arguments: [],
                        location: <internal>:3:6,
                    },
                    location: <internal>:3:6,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        11931663176835612943,
                    ),
                    name: Path {
                        root: [
                            Type {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:0:0,
                                },
                                type_arguments: [],
                                location: <internal>:0:0,
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Int16",
                                location: <internal>:0:0,
                            },
                            type_arguments: [],
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    location: <internal>:12:19,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:18:21,
                    },
                ),
                location: <internal>:0:21,
            },
        ),
    },
    statements: {},
    expressions: {},
}
