compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__implicit_imports@Int8.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo() -> Int8 { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Function(
            FunctionDefinition {
                id: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "foo",
                            location: <internal>:3:6,
                        },
                        type_arguments: [],
                        location: <internal>:3:6,
                    },
                    location: <internal>:3:6,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            5407125044211366997,
                        ),
                    },
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:0:0,
                                },
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Int8",
                                location: <internal>:12:16,
                            },
                            type_arguments: [],
                            location: <internal>:12:16,
                        },
                        location: <internal>:12:16,
                    },
                    location: <internal>:12:16,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:17:20,
                    },
                ),
                location: <internal>:0:20,
            },
        ),
    },
    statements: {},
    expressions: {},
}
